End cashier page

--- a/Magazin2/Magazin2/Magazin2.csproj
+++ b/Magazin2/Magazin2/Magazin2.csproj
@@ -243,5 +243,11 @@
   <ItemGroup>
     <Resource Include="assets\file_view.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="assets\plus.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="assets\minus.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
